[metadata]
name = orbits
description = Orbit fitting with PyMC3 and exoplanet
long_description = file: README.md
author = Thomas Vandal
author_email = thomasvandal@hotmail.com
url = https://github.com/vandalt/orbits
license = MIT License

[options]
zip_safe = False
packages = find:
install_requires =
    pymc3
    celerite2
    aesara-theano-fallback
    pymc3-ext
    exoplanet
    matplotlib
    numpy
    pyyaml
    corner

[options.extras_require]
dev =
    ipython
    jupytext
    black
    isort
    pandas
